[FIX] Correct margin for footer links on smaller mobiles and move the cookie button a little up

--- a/client/src/styles/ComingSoon.module.css
+++ b/client/src/styles/ComingSoon.module.css
@@ -903,6 +903,7 @@
 
     .footer {
         flex-direction: column;
+        align-items: center;
         padding: 20px;
         position: static;
     }
@@ -912,7 +913,7 @@
         flex-direction: column;
         align-items: center;
         padding: 20px 0;
-        margin: 0;
+        margin: 0 !important;
         text-align: center;
         border-radius: 15px;
         transition: all 0.3s ease;
@@ -979,7 +980,7 @@
     .cookie_icon_button {
         width: 50px;
         height: 50px;
-        bottom: 15px;
+        bottom: 70px;
         right: 15px;
     }
 
